banner section done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header>
+        <section id="banner-section">
+            <div class="banner-text">
+                <h1>Let’s Help Those Who Are More In Need</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus porro fuga cumque. </p>
+                <a href="">Donate Now</a>
+            </div>
+        </section>
+    </header>
 </body>
 
 </html>
