--- a/index.html
+++ b/index.html
@@ -13,15 +13,58 @@
 </head>
 
 <body>
+    <!-- ================== Header Section =================== -->
     <header>
         <section id="banner-section">
             <div class="banner-text">
                 <h1>Let’s Help Those Who Are More In Need</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus porro fuga cumque. </p>
-                <a href="">Donate Now</a>
+                <p>The purpose of life is not to be happy. It is to be useful, to be honorable, to be compassionate, to
+                    have it make some difference that you have lived and lived well.</p>
+                <a class="button" href="">Donate Now</a>
             </div>
         </section>
     </header>
+
+    <!-- ================== Donate Today Section =================== -->
+
+    <main>
+        <section id="donate-today-section">
+            <div class="donate-today-text">
+                <h1>Donate Today</h1>
+                <p>There is nothing more beautiful than someone who goes out of their way to make life beautiful for
+                    others.</p>
+            </div>
+            <div id="donate-today-amount">
+                <div class="card card-1">
+                    <h3>100tk</h3>
+                </div>
+                <div class="card card-2">
+                    <h3>200tk</h3>
+                </div>
+                <div class="card card-3">
+                    <h3>500tk</h3>
+                </div>
+                <div class="card card-4">
+                    <h3>1000tk</h3>
+                </div>
+                <div class="card card-5">
+                    <h3>5000tk</h3>
+                </div>
+            </div>
+            <div id="donate-today-form">
+                <input class="input-field" type="number" name="" placeholder="Other Amount (Taka)" id=""><br>
+                <input class="button" type="submit" value="Donate Now">
+            </div>
+        </section>
+    </main>
+
+
+
+
+
+
+
+
 </body>
 
 </html>
