--- a/index.html
+++ b/index.html
@@ -56,9 +56,56 @@
                 <input class="button" type="submit" value="Donate Now">
             </div>
         </section>
+
+
+        <!-- ================== Donate Plan Section =================== -->
+        <section id="donate-plan-section">
+            <div id="donate-plan-text">
+                <h1>Our Donate Plan</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt minus culpa impedit animi dolore maxime
+                    earum.</p>
+            </div>
+            <div id="donate-plan-card">
+                <div class="plan-card plan-card-1">
+                    <img src="icons/food.png" alt="">
+                    <h4>Food for a family</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit.</p>
+                </div>
+                <div class="plan-card plan-card-2">
+                    <img src="icons/shelter.png" alt="">
+                    <h4>Shelter for a family</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit.</p>
+                </div>
+                <div class="plan-card plan-card-3">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h4>Education for a child</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit.</p>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </main>
-
-
 
 
 
