--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
         <section id="donate-plan-section">
             <div id="donate-plan-text">
                 <h1>Our Donate Plan</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt minus culpa impedit animi dolore maxime
-                    earum.</p>
+                <p>Good works is giving to the poor and the helpless, but divine works is showing them their worth to
+                    the One who matters.</p>
             </div>
             <div id="donate-plan-card">
                 <div class="plan-card plan-card-1">
                     <img src="icons/food.png" alt="">
                     <h4>Food for a family</h4>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit.</p>
+                    <p>If you’re in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
+                        about the other 99 per cent.</p>
                 </div>
                 <div class="plan-card plan-card-2">
                     <img src="icons/shelter.png" alt="">
                     <h4>Shelter for a family</h4>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit.</p>
+                    <p>If you’re in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
+                        about the other 99 per cent.</p>
                 </div>
                 <div class="plan-card plan-card-3">
                     <img src="icons/Frame-1.png" alt="">
                     <h4>Education for a child</h4>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit.</p>
+                    <p>If you’re in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
+                        about the other 99 per cent.</p>
                 </div>
             </div>
         </section>
