donate plan section done

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div id="donate-today-form">
                 <input class="input-field" type="number" name="" placeholder="Other Amount (Taka)" id=""><br>
-                <input class="button" type="submit" value="Donate Now">
+                <input class="button input-btn" type="submit" value="Donate Now">
             </div>
         </section>
 
