donate plan section done

--- a/index.html
+++ b/index.html
@@ -88,27 +88,32 @@
         </section>
 
 
+        <!-- ================== Get Update Section =================== -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <section>
+            <div id="get-update-section">
+                <div class="update-text">
+                    <h1>Get My Updates</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem voluptatum minus doloribus
+                        iet veniam recusandae optio.</p>
+                </div>
+                <div id="get-update-form">
+                    <form action="" class="form-area">
+                        <input type="email" name="" id="email" placeholder="Email">
+                        <input type="submit" id="submit" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
 
 
-
+    <footer>
+        <div id="footer-text-area">
+            <h1>Be Humble</h1>
+            <p>I'm gonna do it.</p>
+        </div>
+    </footer>
 
 
 
