--- a/index.html
+++ b/index.html
@@ -27,9 +27,49 @@
         </section>
     </header>
 
-    <!-- ================== Donate Today Section =================== -->
+
 
     <main>
+        <!-- ================== Food Relief Section =================== -->
+        <section>
+            <div id="food-relief-area">
+                <div class="food-relief-top-section">
+                    <h1>Flood Relief Appeal For Bangladesh</h1>
+                    <p>Torrential rains and an onrush from the upstream have worsened flooding in parts of Northeastern
+                        India and Bangladesh. In Sylhet the flood leaving around 50,000 homes without power and forcing
+                        the authorities to open 200 shelters across the northeastern district. BD Foundation
+                        mobilizes volunteers to reach out to very remote areas with the flood relief. Thousands are
+                        stranded and need immediate food and clean water.</p>
+                </div>
+                <div id="food-relief-main">
+                    <div class="food-relief-contact">
+                        <p>More information about BD Foundation, Inc.: BD Foundation is a Northern Virginia-based
+                            non-profit organization dedicated to poverty alleviation, health, sanitation, and
+                            educational projects. We have no political affiliation. Currently, there is a number of
+                            on-going projects in Bangladesh for clean water, sanitation, education, health, children
+                            welfare, etc.</p>
+                        <div class="contact">
+                            <div class="phone">
+                                <img src="icons/phone-icon-928.png" alt="">
+                                <span>(000) 000-0000</span>
+                            </div>
+                            <div class="email">
+                                <img src="icons/email-icon-121.png" alt="">
+                                <span>info@bdfoundation.org</span>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="food-relief-image">
+                        <img src="images/flood-relief-appeal.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================== Donate Today Section =================== -->
+
+
         <section id="donate-today-section">
             <div class="donate-today-text">
                 <h1>Donate Today</h1>
