--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </section>
     </header>
 
-
+    <!-- ========================= Main ========================== -->
 
     <main>
-        <!-- ================== Donate Today Section =================== -->
 
+        <!-- ================== Donate Today Section =================== -->
 
         <section id="donate-today-section">
             <div class="donate-today-text">
@@ -62,8 +62,8 @@
             </div>
         </section>
 
-
         <!-- ================== Donate Plan Section =================== -->
+
         <section id="donate-plan-section">
             <div id="donate-plan-text">
                 <h1>Our Donate Plan</h1>
@@ -130,8 +130,6 @@
             </div>
         </section>
 
-
-
         <!-- ================== Get My Update Section =================== -->
 
         <section>
@@ -152,6 +150,7 @@
         </section>
     </main>
 
+    <!-- ================= Footer Section ================= -->
 
     <footer>
         <div id="footer-text-area">
