--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Assignment: Created By Faizul Osman</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Poppins&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,7 +18,7 @@
     <header>
         <section id="banner-section">
             <div class="banner-text">
-                <h1>Let’s Help Those Who Are More In Need</h1>
+                <h1>Let's Help Those Who Are More In Need</h1>
                 <p>The purpose of life is not to be happy. It is to be useful, to be honorable, to be compassionate, to
                     have it make some difference that you have lived and lived well.</p>
                 <a class="button" href="">Donate Now</a>
@@ -74,19 +73,19 @@
                 <div class="plan-card plan-card-1">
                     <img src="icons/food.png" alt="">
                     <h4>Food for a family</h4>
-                    <p>If you’re in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
+                    <p>If you're in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
                         about the other 99 per cent.</p>
                 </div>
                 <div class="plan-card plan-card-2">
                     <img src="icons/shelter.png" alt="">
                     <h4>Shelter for a family</h4>
-                    <p>If you’re in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
+                    <p>If you're in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
                         about the other 99 per cent.</p>
                 </div>
                 <div class="plan-card plan-card-3">
                     <img src="icons/Frame-1.png" alt="">
                     <h4>Education for a child</h4>
-                    <p>If you’re in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
+                    <p>If you're in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
                         about the other 99 per cent.</p>
                 </div>
             </div>
