--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         about the other 99 per cent.</p>
                 </div>
                 <div class="plan-card plan-card-3">
-                    <img src="icons/Frame-1.png" alt="">
+                    <img src="icons/frame.png" alt="">
                     <h4>Education for a child</h4>
                     <p>If you're in the luckiest one per cent of humanity, you owe it to the rest of humanity to think
                         about the other 99 per cent.</p>
@@ -112,11 +112,11 @@
                             welfare, etc.</p>
                         <div class="contact">
                             <div class="phone">
-                                <img src="icons/phone-icon-928.png" alt="">
+                                <img src="icons/phone-icon.png" alt="">
                                 <span>(000) 000-0000</span>
                             </div>
                             <div class="email">
-                                <img src="icons/email-icon-121.png" alt="">
+                                <img src="icons/email-icon.png" alt="">
                                 <span>info@bdfoundation.org</span>
                             </div>
 
