--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment: Created By Faizul Osman</title>
+
+    <!-- ================== Link With Favicon =================== -->
+    <link rel="icon" type="image/x-icon" href="/icons/fav-icon.png">
+
+    <!-- ================== Link With Google Fonts =================== -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Poppins&display=swap"
         rel="stylesheet">
+
+    <!-- ================== Link With CSS =================== -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,7 +28,7 @@
                 <h1>Let's Help Those Who Are More In Need</h1>
                 <p>The purpose of life is not to be happy. It is to be useful, to be honorable, to be compassionate, to
                     have it make some difference that you have lived and lived well.</p>
-                <a class="button" href="">Donate Now</a>
+                <a target="_blank" class="button" href="https://bdeshfoundation.org/">Donate Now</a>
             </div>
         </section>
     </header>
@@ -56,8 +63,10 @@
                 </div>
             </div>
             <div id="donate-today-form">
-                <input class="input-field" type="number" name="" placeholder="Other Amount (Taka)" id=""><br>
-                <input class="button input-btn" type="submit" value="Donate Now">
+                <form action="">
+                    <input class="input-field" type="number" name="" placeholder="Other Amount (Taka)" id=""><br>
+                    <input class="button input-btn" type="submit" id="submit" value="Donate Now">
+                </form>
             </div>
         </section>
 
@@ -96,7 +105,7 @@
         <section>
             <div id="food-relief-area">
                 <div class="food-relief-top-section">
-                    <h1>Flood Relief Appeal For Bangladesh</h1>
+                    <h1><u> Flood Relief Appeal For Bangladesh</u></h1>
                     <p>Torrential rains and an onrush from the upstream have worsened flooding in parts of Northeastern
                         India and Bangladesh. In Sylhet the flood leaving around 50,000 homes without power and forcing
                         the authorities to open 200 shelters across the northeastern district. BD Foundation
